fixed dark mode full screen issue

--- a/week-2/notes_keeping/src/App.css
+++ b/week-2/notes_keeping/src/App.css
@@ -1,5 +1,6 @@
 .App {
     text-align: center;
+    height: 100vh;
   }
   
   .note {
@@ -13,5 +14,6 @@
   .dark-mode {
     background-color: #121212;
     color: white;
+    padding: 0 0;
   }
   
